@@ -66,7 +66,7 @@ public class TimeUntils {
                     break;
             }
         } catch (DateTimeParseException e) {
-            throw new CommonException(ExceptionType.INCORRECT_DATE.getCode(), String.format("时间格式不正确,应为%s或者%s或者%s或者%s", "yyyy", "yyyy-MM", "yyyy-MM-dd", "yyyy-MM-dd HH:mm:ss"));
+            throw new CommonException(ExceptionType.INCORRECT_DATE.getCode(), "时间格式不正确,应为%s或者%s或者%s或者%s".formatted("yyyy", "yyyy-MM", "yyyy-MM-dd", "yyyy-MM-dd HH:mm:ss"));
         }
         return date;
     }
